<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_manager_edit_item"
        android:icon="@drawable/items_edit"
        android:title="@string/menu_edit_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_manager_add_item"
        android:icon="@drawable/items_add_new_item"
        android:title="@string/menu_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_manager_remove_selected"
        android:icon="@drawable/invoice_composing_clear_list"
        android:title="@string/menu_remove_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_manager_sorted_value"
        android:icon="@drawable/items_sorted_by_price"
        android:title="@string/menu_sort_by_price"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_manager_sorted_name"
        android:icon="@drawable/items_sorted_by_name"
        android:title="@string/menu_sort_by_name"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_manager_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/home_info"
        android:icon="@drawable/menu_info"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom"/>

</menu>