<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:scrollbarSize="4dp">

    <LinearLayout
        android:id="@+id/invoice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/UnknownBlack"
            android:weightSum="3"
            android:padding="12dp">

            <TextView
                android:id="@+id/table_invoice_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exp_id"
                android:textColor="@color/White"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_invoice_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ex_date_dd_mm_yyyy"
                android:textColor="@color/White"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_invoice_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_manager_total_items"
                android:textColor="@color/White"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/title_bar"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/UnknownBlack"
                android:text="@string/dialog_show_invoice_itemID"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textColor="@color/UnknownBlack"
                android:text="@string/dialog_show_invoice_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/UnknownBlack"
                android:text="@string/dialog_show_invoice_value"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/UnknownBlack"
                android:text="@string/dialog_show_invoice_amount"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/UnknownBlack"
                android:text="@string/dialog_show_invoice_total"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>


