<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/items_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="2dp"
            android:text="@string/item_manager_new_item"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/items_dialog_item_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:autofillHints="Item Name"
            android:hint="@string/item_manager_item_name"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/items_dialog_item_description"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:autofillHints=""
            android:hint="@string/item_manager_item_description"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/items_dialog_item_price"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:autofillHints=""
            android:hint="@string/item_manager_item_price"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
