<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    style="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/radiant_gradient_2"
        android:contentDescription="@string/image" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_invoices_button"
                android:background="@drawable/ripple_button"
                android:text="@string/home_invoice_manager"
                android:padding="26dp"
                android:width="350dp"
                android:textSize="32sp"
                android:textColor="@color/White"
                android:layout_margin="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/home_items_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:width="350dp"
                android:background="@drawable/ripple_button"
                android:padding="26dp"
                android:text="@string/home_items_manager"
                android:textSize="32sp"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/profile_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:width="350dp"
                android:background="@drawable/ripple_button"
                android:padding="26dp"
                android:text="@string/home_profile_edit"
                android:textColor="@color/White"
                android:textSize="32sp" />

            <Button
                android:id="@+id/home_statistics_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:width="350dp"
                android:background="@drawable/ripple_button"
                android:padding="26dp"
                android:text="@string/home_statistics"
                android:textColor="@color/White"
                android:textSize="32sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>