<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/endless_constellation"
    android:backgroundTint="#2E20FF"
    android:backgroundTintMode="add"
    tools:context=".StatisticsActivity">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:textColor="@color/UnknownBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:text="@string/stats_statistics_overview"
                android:textAlignment="center"
                android:textSize="42sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_revenue_label"
                android:textColor="@color/UnknownBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/stats_total_revenue_this_month"
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:progress="0"
                    android:layout_width="180dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:indeterminate="false"
                    android:progressTint="#03A9F4" />

            </LinearLayout>


            <TextView
                android:id="@+id/date_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stats_date_info"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/total_revenue_value"
                android:textColor="@color/UnknownBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:textSize="22sp"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/best_selling_label"
                android:textColor="@color/UnknownBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/stats_best_selling_item"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/best_selling_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_n_a"
                android:textColor="@color/UnknownBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
